support for better algorithm - SHA-256